--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "syntax-parser",
-  "version": "1.0.15",
-  "pri": {
-    "type": "component"
-  },
+  "name": "@shuaninfo/monaco-plugins",
+  "version": "2.0.0",
+  "private": true,
+  "type": "module",
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "scripts": {
-    "start": "pri dev",
-    "docs": "pri docs",
-    "build": "pri build",
-    "preview": "pri preview",
-    "analyse": "pri analyse",
-    "test": "pri test",
-    "format": "pri lint",
-    "prepublishOnly": "npm run build && npm run bundle --skipLint",
-    "bundle": "pri bundle",
+    "dev":"npm -C examples/vue2 run dev",
+    "build":"",
+    "test":"",
     "release": "npm publish",
-    "posttest": "codecov -f coverage/*.json -t dc6610f3-32ac-4d30-8676-74d3888349a0",
-    "publish": "pri publish",
-    "lint": "pri lint"
+    "lint":""
+  },
+  
+  "lint-staged": {
+    "packages/**/{src,__tests__,config}/**/**.{js,vue,ts,tsx}": [
+      "eslint --ext .js,.vue,.ts --fix"
+    ]
   },
   "devDependencies": {
-    "pri": "^3.0.0"
+    "@types/lodash": "^4.14.172",
+    "@types/node": "^15.14.9",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "eslint-config-standard-vue-ts": "^1.0.15",
+    "lerna": "^4.0.0",
+    "typescript": "^4.4.4",
+    "tsup":"^5.6.0",
+
+
+    "@vue/cli-plugin-eslint": "~4.5.0"
   },
-  "main": "dist/main",
-  "types": "declaration/index.d.ts",
-  "peerDependencies": {},
-  "dependencies": {
-    "@babel/runtime": "^7.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test -- --package root"
-    }
-  },
-  "module": "dist/module"
+  "engines": {
+    "node": "^14.16.0 || ^16.11.0 || ^17.0.0"
+  }
 }
