--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "noUnusedParameters": true,
-    "types": ["node"]
+    "types": ["node","@types/jest"]
   },
   "exclude": [
     "**/dist",
