--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@shuaninfo/monaco-plugins",
   "version": "2.0.0",
   "private": true,
-  "type": "module",
   "workspaces": [
     "packages/*",
     "examples/*"
@@ -10,13 +9,16 @@
   "scripts": {
     "dev":"npm -C examples/vue2 run dev",
     "build":"",
-    "test":"",
+    "test": "jest",
     "release": "npm publish",
     "lint":""
   },
   
   "lint-staged": {
     "packages/**/{src,__tests__,config}/**/**.{js,vue,ts,tsx}": [
+      "eslint --ext .js,.ts --fix"
+    ],
+    "examples/**/{src,__tests__,config}/**/**.{js,vue,ts,tsx}": [
       "eslint --ext .js,.vue,.ts --fix"
     ]
   },
@@ -26,9 +28,12 @@
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "eslint-config-standard-vue-ts": "^1.0.15",
     "lerna": "^4.0.0",
-    "typescript": "^4.4.4",
-    "tsup":"^5.6.0",
-
+    "typescript": "^4.5.2",
+    "tsup":"^5.8.0",
+    "jest":"^27.3.1",
+    "ts-jest":"^27.0.7 ",
+    "ts-node": "^10.4.0",
+    "@types/jest":"^27.0.3",
 
     "@vue/cli-plugin-eslint": "~4.5.0"
   },
