--- a/packages/sql-parser/package.json
+++ b/packages/sql-parser/package.json
@@ -8,6 +8,8 @@
     "build": "tsup src/index.ts --dts --format esm,cjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@shuaninfo/lexer":"^2.0.0",
+    "@shuaninfo/parser":"^2.0.0"
+  }
 }
