--- a/package.json
+++ b/package.json
@@ -27,23 +27,18 @@
     "@types/lodash": "^4.14.172",
     "@types/node": "^15.14.9",
     "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/eslint-config-standard": "^5.1.2",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "eslint-config-standard-vue-ts": "^1.0.15",
     "lerna": "^4.0.0",
     "typescript": "^4.5.2",
     "tsup":"^5.8.0",
     "jest":"^27.3.1",
     "ts-jest":"^27.0.7 ",
     "ts-node": "^10.4.0",
-    "standard":"^16.0.4",
-    "eslint": "^6.8.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2"
+    "eslint": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "prettier":"^2.4.1",
+    "eslint-config-prettier":"8.3.0",
+    "eslint-plugin-prettier":"4.0.0"
   },
   "engines": {
     "node": "^14.16.0 || ^16.11.0 || ^17.0.0"
