--- a/examples/vue2/package.json
+++ b/examples/vue2/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "vue2",
+  "name": "vue2-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@shuaninfo/parser":"^2.0.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "@shuaninfo/sql-parser": "^2.0.0",
+    "@shuaninfo/auto-complete": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,7 +18,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "monaco-editor": "^0.19.3"
   },
   "eslintConfig": {
     "root": true,
