--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -1,19 +1,20 @@
 {
   "name": "@shuaninfo/parser",
-  "description": "语法解析器",
   "version": "2.0.0",
+  "description": "解析器",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "npm run build -- --watch",
     "build": "tsup src/index.ts --dts --format esm,cjs",
+    "prepack": "unbuild",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "@shuaninfo/lexer":"^2.0.0",
-    "lodash":"4.17.21"
-  },
-  "author": "",
-  "license": "MIT"
+  "devDependencies": {
+    "unbuild": "latest"
+  }
 }
