feat: webwork loader

--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "@swc/helpers": "^0.3.2",
     "@swc/jest": "^0.2.15",
     "@types/jest": "^27.0.3",
-    "@types/lodash": "^4.14.172",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^15.14.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "eslint": "^8.3.0",
+    "lodash": "^4.17.21",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "jest": "^27.3.1",
