--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev:libs": "concurrently \"yarn dev:sql-parser\"  \"yarn dev:parser\" \"yarn dev:auto\"",
     "dev:parser": "yarn workspace  @shuaninfo/parser  run dev",
     "dev:sql-parser": "yarn workspace @shuaninfo/sql-parser run dev",
-    "dev:auto": "yarn workspace @shuaninfo/auto-complete  run dev",
+    "dev:auto": "yarn workspace @shuaninfo/auto-complete run dev",
     "test": "jest",
     "release": "npm publish"
   },
@@ -35,11 +35,13 @@
     "@swc/jest": "^0.2.15",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.178",
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "^15.14.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "eslint": "^8.3.0",
+    "lodash-es": "^4.17.21",
     "lodash": "^4.17.21",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
