--- a/plugins/auto-complete/package.json
+++ b/plugins/auto-complete/package.json
@@ -15,7 +15,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@shuaninfo/sql-parser": "^2.0.0"
+    "@shuaninfo/sql-parser": "^2.0.0",
+    "@shuaninfo/parser": "^2.0.0"
   },
   "devDependencies": {
     "esbuild-plugin-d.ts": "^1.1.0",
